# hobbes

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: install.sh
src/hobbes/: __init__.py  cli.py
src/hobbes/commands/: info.py  install.py  list_cmd.py  outdated.py  pin.py  search.py  self_update.py  uninstall.py  update.py
src/hobbes/core/: __init__.py  checksum.py  config.py  downloader.py  extractor.py  github.py  manifest.py  platform.py
src/hobbes/models/: __init__.py  package.py  release.py
tests/: __init__.py
